Made some changees

--- a/src/apps/api/package.json
+++ b/src/apps/api/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "start": "node dist/server.ts"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
