Made some changees

--- a/src/apps/api/package.json
+++ b/src/apps/api/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "node dist/server.ts"
+    "start": "tsx src/server.ts"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
